--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,1 +1,19 @@
 ---
+- hosts: localhost
+  become: true
+
+- var_files:
+    - vars/main.yml
+
+- tasks:
+    name: Install all required packages
+    community.general.pacman:
+        name: '{{ item }}'
+        state: present
+    with_items: '{{ required-packages }}'
+
+    name: Enable systemd stuff
+    service:
+        name:
+        state: enabled
+    with_items: '{{ enabled-services }}'
