--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -2,6 +2,9 @@
 - hosts: localhost
   become: true
 
+- roles:
+    - kewlfft.aur
+
 - var_files:
     - vars/main.yml
 
@@ -11,6 +14,60 @@
         name: '{{ item }}'
         state: present
     with_items: '{{ required-packages }}'
+
+    name: Install AUR packages
+    aur:
+        name: '{{ items }}'
+        state: present
+    with_items: '{{ required_aur }}'
+
+    name: Setup nsswitch.conf
+    lineinfile:
+        path: /etc/nsswitch.conf
+        regexp: '^myhostname$'
+        line: '\1 mdns_minimal [NOTFOUND=return]'
+        backup: true
+    notify: restart_avahi
+    
+    name: Setup fonts
+    blockinfile:
+        path: /etc/fonts/local.conf
+        block: |
+        <?xml version="1.0"?>
+        <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+        <fontconfig>
+            <match>
+                <edit mode="prepend" name="family"><string>Noto Sans</string></edit>
+            </match>
+            <match target="pattern">
+                <test qual="any" name="family"><string>serif</string></test>
+                <edit name="family" mode="assign" binding="same"><string>Noto Serif</string></edit>
+            </match>
+            <match target="pattern">
+                <test qual="any" name="family"><string>sans-serif</string></test>
+                <edit name="family" mode="assign" binding="same"><string>Noto Sans</string></edit>
+            </match>
+            <match target="pattern">
+                <test qual="any" name="family"><string>monospace</string></test>
+                <edit name="family" mode="assign" binding="same"><string>Noto Mono</string></edit>
+            </match>
+        </fontconfig>
+
+    name: Create bitmap symlinks
+    file:
+        src: '{{ item }}'
+        dest: "/etc/fonts/conf.d"
+        state: link
+    with_items:
+        - /etc/fonts/conf.avail/70-no-bitmaps.conf
+        - /etc/fonts/conf.avail/10-sub-pixel-rgb.conf
+        - /etc/fonts/conf.avail/11-lcdfilter-default.conf
+
+    name: Enable freetype properties
+    replace:
+      path: /etc/profile.d/freetype2.sh
+      regexp: '^#(.*FREETYPE_PROPERTIES.*)'
+      replace: '\1'
 
     name: Enable systemd stuff
     service:
