--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -11,7 +11,7 @@
   tasks:
   - name: Install all required packages
     community.general.pacman:
-        name: '{{ item }}'
+        name: '{{ items }}'
         state: present
     with_items: '{{ required-packages }}'
 
@@ -19,7 +19,7 @@
     aur:
         name: '{{ items }}'
         state: present
-    with_items: '{{ required_aur }}'
+    with_items: '{{ required-aur }}'
 
   - name: Setup nsswitch.conf
     lineinfile:
