--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -37,19 +37,19 @@
             <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
             <fontconfig>
                 <match>
-                    <edit mode="prepend" name="family"><string>Noto Sans</string></edit>
+                    <edit mode="prepend" name="family"><string>{{ sans_serif_font }}</string></edit>
                 </match>
                 <match target="pattern">
                     <test qual="any" name="family"><string>serif</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>Noto Serif</string></edit>
+                    <edit name="family" mode="assign" binding="same"><string>{{ serif_font }}</string></edit>
                 </match>
                 <match target="pattern">
                     <test qual="any" name="family"><string>sans-serif</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>Noto Sans</string></edit>
+                    <edit name="family" mode="assign" binding="same"><string>{{ sans_serif_font }}</string></edit>
                 </match>
                 <match target="pattern">
                     <test qual="any" name="family"><string>monospace</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>Noto Mono</string></edit>
+                    <edit name="family" mode="assign" binding="same"><string>{{ monospace_font }}</string></edit>
                 </match>
             </fontconfig>
 
