--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -25,7 +25,7 @@ required_packages:
   - playerctl
   - samba
   - ttf-dejavu
-  - ttf-libertarian
+  - ttf-liberation 
   - noto-fonts
   - neofetch
   - caprine
