fixed user for aur install

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -20,6 +20,7 @@
         name: '{{ item }}'
         state: present
     with_items: '{{ required_aur }}'
+    become: no
 
   - name: Setup nsswitch.conf
     lineinfile:
