--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -73,7 +73,7 @@
 
   - name: Enable systemd stuff
     service:
-        name:
+        name: '{{ item }}'
         state: enabled
     with_items: '{{ enabled_services }}'
 
