changed some enabled settings.

--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -43,8 +43,8 @@ required_aur:
   - polybar
 
 enabled_services:
-  - cupds
-  - avahi-daemon
-  - ufw
+  - cupsd
+  - avahi-daemon.service
+  
   
 
