updated dotfiles execution

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -83,6 +83,30 @@
         groups: docker
         append: yes
 
+  - name: Download dotfiles
+    git:
+        repo: '{{ dotfiles_url }}'
+        dest: ~/
+        update: yes
+    become: no
+
+  - name: Install dotfiles
+    file:
+        src: "{{ srcBase }}/dotfiles/{{ item.src }}"
+        dest: "{{ dstBase }}/{{ item.dst }}"
+        state: link
+        force: yes
+    with_items:
+        - { src: "bash/.bash_profile", dst: ".bash_profile" }
+        # - { src: "bash/.bashrc", dst: ".bashrc" }
+        # - { src: "dunst/dunst", dst: ".config/dunst" }
+        # - { src: "rofi/config", dst: ".config/rofi/config" }
+        # - { src: "picom/config", dst: ".config/picom.conf" }
+        # - { src: "i3/i3_config", dst: ".config/i3/config" }
+        # - { src: "i3/i3_colors", dst: ".config/i3/colors"}
+        # - { src: "polybar/polybar_config", dst: ".config/polybar/config" }
+
+# HANDLERS
   handlers:
     - name: restart_avahi
       ansible.builtin.service:
