--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -86,7 +86,7 @@
   - name: Download dotfiles
     git:
         repo: '{{ dotfiles_url }}'
-        dest: ~/
+        dest: "{{ srcBase }}/dotfiles"
         update: yes
     become: no
 
