--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -41,6 +41,8 @@ required_packages:
   - nm-connection-editor
   - sane
   - thunar
+  - xorg
+  - xorg-xinit
 
 required_aur:
   - polybar
@@ -49,5 +51,14 @@ enabled_services:
   - cups.service
   - avahi-daemon.service
   
-  
+dotfile_locations:
+  - { src: "xfiles/.xinitrc", dst: ".xinitrc"}
+  - { src: "bash/.bash_profile", dst: ".bash_profile" }
+  # - { src: "bash/.bashrc", dst: ".bashrc" }
+  # - { src: "dunst/dunst", dst: ".config/dunst" }
+  # - { src: "rofi/config", dst: ".config/rofi/config" }
+  # - { src: "picom/config", dst: ".config/picom.conf" }
+  # - { src: "i3/i3_config", dst: ".config/i3/config" }
+  # - { src: "i3/i3_colors", dst: ".config/i3/colors"}
+  # - { src: "polybar/polybar_config", dst: ".config/polybar/config" }
 
