--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -22,6 +22,7 @@ required_packages:
   - pulseaudio-alsa
   - pulseaudio-bluetooth
   - pulseaudio-equalizer
+  - bluez-utils
   - pulsemixer
   - playerctl
   - samba
@@ -43,9 +44,11 @@ required_packages:
   - xorg-xinit
 required_aur:
   - polybar
+  - betterlockscreen
 enabled_services:
   - cups.service
   - avahi-daemon.service
+  - bluetooth.service
 dots_links:
   - { src: "xfiles/.xinitrc", dst: ".xinitrc"}
   - { src: "bash/.bash_profile", dst: ".bash_profile" }
