adding more vars to dotfiles

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -117,6 +117,9 @@
         force: yes
     with_items: '{{ dots_links }}'
 
+  - name: Setup fonts
+    shell: 'fc-cache -fv'
+
 # HANDLERS
   handlers:
     - name: restart_avahi
