fix a bunch of issues with pulse and fonts

--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -48,6 +48,11 @@ required_packages:
   - polybar
   - i3lock-color
   - betterlockscreen
+  - remmina
+  - freerdp
+  - openfortivpn
+  - unzip
+  - teams
 required_aur:
 remove_packages:
 enabled_services:
