--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -28,31 +28,31 @@
     become: yes
     notify: restart_avahi
     
-  - name: Setup fonts
-    blockinfile:
-        path: /etc/fonts/local.conf
-        block: |
-            <?xml version="1.0"?>
-            <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
-            <fontconfig>
-                <match>
-                    <edit mode="prepend" name="family"><string>{{ sans_serif_font }}</string></edit>
-                </match>
-                <match target="pattern">
-                    <test qual="any" name="family"><string>serif</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>{{ serif_font }}</string></edit>
-                </match>
-                <match target="pattern">
-                    <test qual="any" name="family"><string>sans-serif</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>{{ sans_serif_font }}</string></edit>
-                </match>
-                <match target="pattern">
-                    <test qual="any" name="family"><string>monospace</string></test>
-                    <edit name="family" mode="assign" binding="same"><string>{{ monospace_font }}</string></edit>
-                </match>
-            </fontconfig>
-        create: yes
-    become: yes
+  # - name: Setup fonts
+  #   blockinfile:
+  #       path: /etc/fonts/local.conf
+  #       block: |
+  #           <?xml version="1.0"?>
+  #           <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+  #           <fontconfig>
+  #               <match>
+  #                   <edit mode="prepend" name="family"><string>{{ sans_serif_font }}</string></edit>
+  #               </match>
+  #               <match target="pattern">
+  #                   <test qual="any" name="family"><string>serif</string></test>
+  #                   <edit name="family" mode="assign" binding="same"><string>{{ serif_font }}</string></edit>
+  #               </match>
+  #               <match target="pattern">
+  #                   <test qual="any" name="family"><string>sans-serif</string></test>
+  #                   <edit name="family" mode="assign" binding="same"><string>{{ sans_serif_font }}</string></edit>
+  #               </match>
+  #               <match target="pattern">
+  #                   <test qual="any" name="family"><string>monospace</string></test>
+  #                   <edit name="family" mode="assign" binding="same"><string>{{ monospace_font }}</string></edit>
+  #               </match>
+  #           </fontconfig>
+  #       create: yes
+  #   become: yes
 
   - name: Create bitmap symlinks
     file:
@@ -87,21 +87,21 @@
         append: yes
     become: yes
 
-  - name: Auto connection for bluetooth
-    blockinfile:
-        path: /etc/pulse/default.pa
-        block: |
-            ### Automatically switch to newly-connected devices
-            load-module module-switch-on-connect
-    become: yes
+  # - name: Auto connection for bluetooth
+  #   blockinfile:
+  #       path: /etc/pulse/default.pa
+  #       block: |
+  #           ### Automatically switch to newly-connected devices
+  #           load-module module-switch-on-connect
+  #   become: yes
 
-  - name: Additional settings for bluetooth
-    lineinfile:
-        path: /etc/pulse/default.pa
-        regexp: '^(.*load-module module-bluetooth-policy.*)$'
-        backup: yes
-        line: '\1 auto_switch=2'
-    become: yes
+  # - name: Additional settings for bluetooth
+  #   lineinfile:
+  #       path: /etc/pulse/default.pa
+  #       regexp: '^(.*load-module module-bluetooth-policy.*)$'
+  #       backup: yes
+  #       line: '\1 auto_switch=2'
+  #   become: yes
 
   - name: Clone oh-my-zsh
     git:
