--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -6,92 +6,73 @@ required_packages:
   - avahi
   - nss-mdns
   - alacritty
-  - fontconfig
   - docker
   - docker-compose
   - vagrant
-  - virtualbox
-  - virtualbox-guest-utils
-  - alsa
-  - pulseaudio
-  - pulseaudio-alsa
-  - pulseaudio-bluetooth
-  - pulseaudio-equalizer
+  - bluez
   - bluez-utils
-  - pulsemixer
-  - playerctl
+  - pipewire
+  - pipewire-pulse
+  - pipewire-alsa
+  - pipewire-jack
+  - pipewire-docs
   - samba
   - neofetch
-  - caprine
   - tmux
-  - grim
-  - libreoffice-fresh
-  - network-manager-applet
-  - nm-connection-editor
   - sane
   - feh
-  - remmina
-  - freerdp
-  - openfortivpn
   - unzip
-  - teams
-  - visual-studio-code-bin
-  - inxi
-  - blueman
   - ttf-dejavu
   - ttf-liberation
   - noto-fonts
   - noto-fonts-extra
   - noto-fonts-emoji
-  - ttf-font-awesome
-  - i3-gaps
-  - i3status
-  - rofi
-  - dunst
-  - picom
-  - xorg
-  - xorg-xinit
-  - polybar
-  - thunar
-  - gvfs
-  - thunar-media-tags-plugin
-  - ttf-ibm-plex
   - ttf-fira-mono
   - ttf-fira-sans
   - ttf-fira-code
   - ttf-nerd-fonts-symbols
-  - ttf-roboto
-  - ttf-roboto-mono
-  - ttf-opensans
-  - ttf-ubuntu-font-family
-  - google-chrome-dev
-# spotify is broken trying to install it here
+  - htop
+# gui items
+  - sway
+  - swayidle
+  - swaylock
+  - waybar
+  - wofi
+  - mako
+  - vscodium
+  - imagemagick
+  - papirus-icon-theme
+  - mesa
+  - remmina
+  - freerdp
+  - lxappearance
+  - libva-intel-driver
+  - libva-vdpau-driver
+  - libreoffice-fresh
+# xwayland
+  - xorg-xwayland
+# workrelated
+  - teams
+  - rocketchat-desktop
+  - openfortivpn
 enabled_services:
   - cups.service
   - avahi-daemon.service
   - bluetooth.service
 dots_links:
-  - { src: "xfiles/.xinitrc", dst: ".xinitrc"}
-  - { src: "xfiles/.Xresources", dst: ".Xresources"}
-  - { src: "bash/.bash_profile", dst: ".bash_profile" }
-  - { src: "bash/.bashrc", dst: ".bashrc" }
+  - { src: "mako", dst: ".config/mako" }
+  - { src: "waybar", dst: ".config/waybar" }
+  - { src: "sway", dst: ".config/sway" }
   - { src: "alacritty", dst: ".config/alacritty" }
   - { src: "backgrounds", dst: ".backgrounds" }
   - { src: "fonts", dst: ".fonts" }
   - { src: "scripts", dst: ".scripts" }
-  - { src: "dunst", dst: ".config/dunst" }
-  - { src: "rofi", dst: ".config/rofi" }
-  - { src: "picom", dst: ".config/picom" }
-  - { src: "i3", dst: ".config/i3" }
-  - { src: "polybar", dst: ".config/polybar" }
   - { src: "zsh/.zprofile", dst: ".zprofile" }
   - { src: "zsh/.zshrc", dst: ".zshrc" }
-  - { src: "vim/.vimrc", dst: ".vimrc" }
-  - { src: "vim/.vim", dst: ".vim" }
-  - { src: "gtk/.gtkrc-2.0", dst: ".gtkrc-2.0" }
-  - { src: "gtk/gtk3-settings.ini", dst: ".config/gtk-3.0/settings.ini" }
+  - { src: "zsh/.zsh", dst: ".zsh" }
+  - { src: "zsh/.zshenv", dst: ".zshenv" }
+  - { src: "tmux/.tmux.conf", dst: ".tmux.conf" }
 git_requirements:
   - { repo: "https://github.com/ohmyzsh/ohmyzsh.git", dst: "{{ ansible_user_dir }}/.oh-my-zsh"}
   - { repo: "https://github.com/denysdovhan/spaceship-prompt.git", dst: "{{ ansible_user_dir }}/.oh-my-zsh/custom/themes/spaceship-prompt"}
   - { repo: "https://github.com/dracula/gtk.git", dst: "{{ ansible_user_dir }}/.themes/Dracula"}
-  - { repo: "https://github.com/cbrnix/Flatery.git", dst: "{{ ansible_user_dir }}/.icons"}
